--- a/extra/flatpak/io.github.coccinelle.coccinelle.yaml
+++ b/extra/flatpak/io.github.coccinelle.coccinelle.yaml
@@ -1,4 +1,4 @@
-app-id: fr.inria.gitlabpages.coccinelle.Coccinelle
+app-id: io.github.coccinelle.coccinelle
 runtime: org.freedesktop.Sdk
 runtime-version: '23.08'
 sdk: org.freedesktop.Sdk
