Adjust help text for --with-metainfo configure option
Fixes 3c20ea6f8 ("Install AppStream metadata file")

Signed-off-by: Olaf Hering <olaf@aepfle.de>

--- a/configure.ac
+++ b/configure.ac
@@ -554,7 +554,7 @@ dnl --without-metainfo disables metainfo installation.
 
 AC_ARG_WITH([metainfo],
     AS_HELP_STRING([--with-metainfo[=PATH]],
-        [Install the bash auto-completion script in this directory.\
+        [Install metainfo into this directory.\
          @<:@default=yes@:>@]),
     [],
     [AC_SUBST([with_metainfo], [yes])])
