change debian docker tag rom stable to bookworm
stable used to point to bookworm, now points to trixie as of August 2025
builds fail on trixie, this allows the CI to continue for now

--- a/ci/distributions/debian/Dockerfile
+++ b/ci/distributions/debian/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:stable
+FROM debian:bookworm
 RUN apt-get update && apt-get install --yes autoconf automake unzip aspcud \
   rsync git mercurial darcs build-essential sudo vim curl python3 \
   libpython3-dev hevea texlive-fonts-extra
